Added mongo and redis service

--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ DB_PASSWORD=nagun979@
 DB_NAME=finance
 DB_PORT=3306
 GEMINI_API_KEY=AIzaSyBuqiHbtU4I2pkX4oM9ZUYI7fPKMUAiews
+
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_DB=0
+
+# MongoDB
+MONGO_URI=mongodb+srv://adminbot:loans24_admin@admin-loan-assistance.nut9v.mongodb.net/?retryWrites=true&w=majority&appName=Admin-Loan-Assistance
+MONGO_DB_NAME=adminbot
