--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=nagun979@
-DB_NAME=finance
-DB_PORT=3306
+DB_USER=root1
+DB_PASSWORD=123456789
+DB_NAME=loans24
+DB_PORT=33061
 GEMINI_API_KEY=AIzaSyBuqiHbtU4I2pkX4oM9ZUYI7fPKMUAiews
 
 REDIS_HOST = localhost
