Added excel and fixed pipeline errors

--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
-DB_HOST=localhost
-DB_USER=root1
-DB_PASSWORD=123456789
-DB_NAME=loans24
-DB_PORT=33061
+# DB_HOST=localhost
+# DB_USER=root1
+# DB_PASSWORD=123456789
+# DB_NAME=loans24
+# DB_PORT=33061
+DB_HOST=193.203.184.109
+DB_USER=u802716415_loans24
+DB_PASSWORD=Nagun979@
+DB_NAME=u802716415_loans24
+DB_PORT=3306
+
 GEMINI_API_KEY=AIzaSyBuqiHbtU4I2pkX4oM9ZUYI7fPKMUAiews
 
 REDIS_HOST = localhost
